fix tree and scrollbar height

--- a/src/pages/form-constructor/tree-panel/ui/index.css
+++ b/src/pages/form-constructor/tree-panel/ui/index.css
@@ -1,13 +1,13 @@
 .TreePanel {
   background-color: var(--white);
-  overflow: auto;
   z-index: 5;
-  padding: 0 15px;
+  padding: 15px 15px 30vh;
+  box-sizing: border-box;
+  overflow: auto !important;
 }
 
-.TreePanel .marginTopAndBottom {
-  margin-top: 20px;
-  margin-bottom: 30vh;
+.TreePanel::-webkit-scrollbar {
+  display: none;
 }
 
 .addCompButton {
